--- a/fromColab.ipynb
+++ b/fromColab.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhAjaz4xPXaLoKNTy5AlKE",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyORWq6fI7JwIcq7BkLfy0ss",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,12 +52,54 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "myint = 7\n",
+        "print (myint)"
+      ],
       "metadata": {
-        "id": "FP8kJcJo9YIo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FP8kJcJo9YIo",
+        "outputId": "ed692fe3-6e8b-4073-ef80-469638c7dce1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "myfloat = 7.0\n",
+        "print(myfloat)\n",
+        "myfloat = float (9)\n",
+        "print (myfloat)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pJ8qhSCK_MFI",
+        "outputId": "dad7ed33-2458-4ce5-805a-4c3fd9a33b71"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7.0\n",
+            "9.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
