--- a/fromColab.ipynb
+++ b/fromColab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORWq6fI7JwIcq7BkLfy0ss",
+      "authorship_tag": "ABX9TyOZg9CBVDM369J0fQ3dpH48",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,6 +97,42 @@
           "text": [
             "7.0\n",
             "9.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# change this code\n",
+        "mystring = 'hello'\n",
+        "myfloat = 10.0\n",
+        "myint = 20\n",
+        "\n",
+        "# testing code\n",
+        "if mystring == \"hello\":\n",
+        "  print(\"String: %s\" % mystring)\n",
+        "if isinstance(myfloat, float) and myfloat == 10.0:\n",
+        "  print(\"Float: %f\" % myfloat)\n",
+        "if isinstance(myint, int) and myint == 20:\n",
+        "  print(\"Integer: %d\" % myint)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MgmkkL1XCmfx",
+        "outputId": "9e759e99-4ef6-4c8a-94e3-43670df4254d"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "String: hello\n",
+            "Float: 10.000000\n",
+            "Integer: 20\n"
           ]
         }
       ]
